--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "curl": "^0.1.4",
     "express": "^5.1.0",
     "sqlite3": "^5.1.7"
   },
