Implement session-based authentication and user scoping
Added express-session and connect-sqlite3 for session management, with sessions stored in SQLite. Introduced middleware to require login for protected routes. Updated backend logic to scope passwords and notifications to the logged-in user via user_id. Refactored frontend to use alerts for feedback and send credentials with requests. Updated database schema comments for user scoping. Integrated Google Fonts for consistent typography across frontend pages.

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "connect-sqlite3": "^0.9.16",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "curl": "^0.1.4",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
