--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "curl": "^0.1.4",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "http-server": "^14.1.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
